@@ -52,6 +52,7 @@ v1.2.0 mmm dd, 2022
 
 v1.0.5 October --, 2022
 * Fixed bug in eyedropper feature with 16bits images
+* Added button to see original image in background extraction
 
 v1.0.4 September 02, 2022
 
